datasets/dataset_txt/pipenv/pipenv_1631.txt
giraldeau commented on 19 Jan 2018
The package psutil fails to compile with MSYS2 on Windows 7 because of a compilation failure Here is the first error showing the problem.
    C:\msys64\mingw64\bin/x86_64-w64-mingw32-gcc.exe -Wno-unused-result -Wsign-compare -DNDEBUG -march=x86-64 -mtune=generic -O2 -pipe -fwrapv -D__USE_MINGW_ANSI_STDIO=1 -DNDEBUG -march=x86-64 -mtune=generic -O2 -pipe -fwrapv -D__USE_MINGW_ANSI_STDIO=1 -DNDEBUG -DPSUTIL_WINDOWS=1 -DPSUTIL_VERSION=531 -D_WIN32_WINNT=0x0601 -D_AVAIL_WINVER_=0x0601 -D_CRT_SECURE_NO_WARNINGS -DPSAPI_VERSION=1 -IC:/msys64/mingw64/include/python3.6m -c psutil/_psutil_common.c -o build/temp.mingw-3.6/psutil/_psutil_common.o
    C:\msys64\mingw64\bin/x86_64-w64-mingw32-gcc.exe -Wno-unused-result -Wsign-compare -DNDEBUG -march=x86-64 -mtune=generic -O2 -pipe -fwrapv -D__USE_MINGW_ANSI_STDIO=1 -DNDEBUG -march=x86-64 -mtune=generic -O2 -pipe -fwrapv -D__USE_MINGW_ANSI_STDIO=1 -DNDEBUG -DPSUTIL_WINDOWS=1 -DPSUTIL_VERSION=531 -D_WIN32_WINNT=0x0601 -D_AVAIL_WINVER_=0x0601 -D_CRT_SECURE_NO_WARNINGS -DPSAPI_VERSION=1 -IC:/msys64/mingw64/include/python3.6m -c psutil/_psutil_windows.c -o build/temp.mingw-3.6/psutil/_psutil_windows.o
    In file included from psutil/arch/windows/process_info.h:13:0,
                     from psutil/_psutil_windows.c:34:
    psutil/arch/windows/ntextapi.h:124:14: error: nested redefinition of 'enum _KWAIT_REASON'
     typedef enum _KWAIT_REASON {
                  ^~~~~~~~~~~~~
    psutil/arch/windows/ntextapi.h:124:14: error: redeclaration of 'enum _KWAIT_REASON'
    In file included from psutil/arch/windows/ntextapi.h:8:0,
                     from psutil/arch/windows/process_info.h:13,
                     from psutil/_psutil_windows.c:34:
    C:/msys64/mingw64/x86_64-w64-mingw32/include/winternl.h:622:16: note: originally defined here
       typedef enum _KWAIT_REASON {
                    ^~~~~~~~~~~~~
Describe your environment
Windows 7 - MSYS2
Python version: $ python3 -V 3.6.3
Pipenv version: $ pipenv --version N.-D.
Steps to replicate
In a msys2 64-bit shell, execute pip3 install pipenv